Successfully loading registration and login pages. Posting gets a 500 error.

--- a/imagersite/imagersite/templates/home.html
+++ b/imagersite/imagersite/templates/home.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <h2>
-    <a href="/register">Register</a> | <a href="/login">Login</a>
+    <a href="/accounts/register">Register</a> | <a href="/accounts/login">Login</a>
 </h2>
 
     <p>
