--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -8,6 +8,18 @@
     </title>
 </head>
 <body>
+
+<nav>
+{% if user.is_authenticated %}
+
+Logged in as {{user.username}} | <a href="/accounts/logout/">Log out</a>
+
+{% else %}
+
+<a href="/accounts/login">Log in</a> | <a href="/accounts/register">Register</a>
+
+{% endif %}
+</nav>
 {% block content %}
 
 {% endblock %}
