--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -10,6 +10,9 @@
 <body>
 
 <nav>
+
+<a href="/">Home</a> |
+
 {% if user.is_authenticated %}
 
 Logged in as {{user.username}} | <a href="/accounts/logout/">Log out</a>
