--- a/imagersite/imagersite/templates/registration/activation_complete.html
+++ b/imagersite/imagersite/templates/registration/activation_complete.html
@@ -9,6 +9,8 @@
 <p>
     Congratulations.
 
+    <a href="/accounts/login/">Click here to log in.</a>
+
     Use your new found powers wisely.
 </p>
 
