working library page showing one photo.

--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -17,8 +17,8 @@
 
     <span>Logged in as {{user.username}}</span>|
     <span><a href="/accounts/logout/">Log out</a></span>|
-    <span><a href="/profile/{{user.pk}}/">Profile</a></span>|
-    <span><a href="/library/{{user.pk}}/">Library</a></span>
+    <span><a href="/accounts/profile/">Profile</a></span>|
+    <span><a href="/images/library/">Library</a></span>
 
 {% else %}
 
