--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -6,6 +6,10 @@
         {% block title %}
         {% endblock %}
     </title>
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href={% static "bootstrap.css" %}>
+    <link rel="stylesheet" type="text/css" href={% static "base.css" %}>
+
 </head>
 <body>
 
