--- a/imagersite/imagersite/templates/photo.html
+++ b/imagersite/imagersite/templates/photo.html
@@ -11,6 +11,7 @@
     <article class="photo-info">
 
         <!-- link to go back to album -->
+        <!-- other photo info -->
 
         <h3>{{object.title}}</h3>
         <img src="{{object.img_file.url}}">
