--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+<div class="container">
 
 <nav>
 
@@ -33,5 +34,6 @@
 {% block content %}
 
 {% endblock %}
+</div>
 </body>
 </html>
