--- a/imagersite/imagersite/templates/home.html
+++ b/imagersite/imagersite/templates/home.html
@@ -13,7 +13,7 @@
     <p>
         {{testval}}
     </p>
-
-    <img src="{{img_url}}">
-
+    <div class="single-photo-info">
+        <img src="{{img_url}}">
+    </div>
 {% endblock %}
