--- a/imagersite/static/base.css
+++ b/imagersite/static/base.css
@@ -3,3 +3,16 @@
     margin: 0;
     padding: 0;
 }
+.single-photo-info img{
+    width: 100%;
+    height: 100%;
+    /*overflow: hidden;*/
+}
+.single-photo-info {
+        width: 600px;
+        height: 600px;
+    }
+/*.photo-album-info {
+    border-top: solid;
+}
+*/
