rendering default image if no cover specified.

--- a/imagersite/imagersite/templates/album.html
+++ b/imagersite/imagersite/templates/album.html
@@ -15,7 +15,7 @@
 
             <div class="container">
                 <div class="row">
-                    {% for photo in user.photos.all %}
+                    {% for photo in album.photos.all %}
                         <div class="col-sm-3">
                             <article class="photo-info">
                                 <p class="photo-title">{{photo.title}}</p>
