--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -18,7 +18,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
 
-      <a class="navbar-brand" href="/accounts/profile">{{user.username}}</a>
+      <a class="navbar-brand" href="/profile">{{user.username}}</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
