Updated profile to show all user profile information.

--- a/imagersite/imagersite/templates/profile.html
+++ b/imagersite/imagersite/templates/profile.html
@@ -8,8 +8,14 @@
 
     <h4>{{user.username}}'s Profile</h4>
 
+    <p>Location: {{user.profile.location}}</p>
+
+    <p>Camera: {{user.profile.camera}}</p>
+
+    <p>Favorite Style: {{user.profile.fav_photo}}</p>
+
     <p>You have {{user.profile.friends.count}} friends.</p>
 
-    <p>You have {{user.albums.count}} albums with {{user.photos.count}} photos.</p>
+    <p>You have {{user.albums.count}} albums and {{user.photos.count}} photos.</p>
 
 {% endblock %}
