--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -30,7 +30,7 @@
           <li><a href="/images/library/">Library</a></li>
       </ul>
        <ul class="nav navbar-nav">
-          <li><a href="/accounts/profile/">Profile</a></li>
+          <li><a href="/profile/">Profile</a></li>
       </ul>
        <ul class="nav navbar-nav navbar-right">
         <li><a href="/accounts/logout/">Log out</a></li>
