Working add photo using extended custom CreateView.

--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -32,6 +32,9 @@
        <ul class="nav navbar-nav">
           <li><a href="/profile/">Profile</a></li>
       </ul>
+       <ul class="nav navbar-nav">
+          <li><a href="/images/photo/add/">New Photo</a></li>
+      </ul>
        <ul class="nav navbar-nav navbar-right">
         <li><a href="/accounts/logout/">Log out</a></li>
       </ul>
