--- a/imagersite/imagersite/templates/base.html
+++ b/imagersite/imagersite/templates/base.html
@@ -35,6 +35,9 @@
        <ul class="nav navbar-nav">
           <li><a href="/images/photo/add/">New Photo</a></li>
       </ul>
+       <ul class="nav navbar-nav">
+          <li><a href="/images/album/add/">New Album</a></li>
+      </ul>
        <ul class="nav navbar-nav navbar-right">
         <li><a href="/accounts/logout/">Log out</a></li>
       </ul>
