Editable Albums, but without photos selector.

--- a/imagersite/imagersite/templates/library.html
+++ b/imagersite/imagersite/templates/library.html
@@ -23,6 +23,9 @@
               </a>
               {% empty %}
             {% endthumbnail %}
+            <p>
+              <a href="/images/album/{{album.pk}}/edit/">Edit</a>
+            </p>
           </article>
           </div>
         {% endfor %}
