Successfully setting up user permissions based on Active Users groups.

--- a/imagersite/imagersite/templates/profile.html
+++ b/imagersite/imagersite/templates/profile.html
@@ -8,6 +8,8 @@
 
   <h3>{{user.username}}'s Profile</h3>
 
+  <p><a href="/profile/edit">Edit</a></p>
+
   <p>Location: {{user.profile.location}}</p>
 
   <p>Camera: {{user.profile.camera}}</p>
