Extended save() method for AlbumForm. Enables related photos to save on create and save.

--- a/imagersite/imagersite/templates/profile.html
+++ b/imagersite/imagersite/templates/profile.html
@@ -10,6 +10,10 @@
 
   <p><a href="/profile/edit">Edit</a></p>
 
+  <p>First Name: {{user.first_name}}</p>
+
+  <p>Last Name: {{user.last_name}}</p>
+
   <p>Location: {{user.profile.location}}</p>
 
   <p>Camera: {{user.profile.camera}}</p>
