--- a/imagersite/imagersite/templates/edit_obj.html
+++ b/imagersite/imagersite/templates/edit_obj.html
@@ -12,6 +12,7 @@
     {{form.as_table}}
    </table>
    <input type="submit" value="Save">
+   <a href="{{model.get_url}}"><button type="button">Cancel</button></a>
 </form>
 
 {% endblock %}
