Working cancel url from get_context_data returns to appropriate path.

--- a/imagersite/imagersite/templates/create_or_edit.html
+++ b/imagersite/imagersite/templates/create_or_edit.html
@@ -12,7 +12,7 @@
     {{form.as_table}}
    </table>
    <input type="submit" value="Save">
-   <a href="{{form.instance.get_url}}"><button type="button">Cancel</button></a>
+   <a href="{{cancel_url}}"><button type="button">Cancel</button></a>
 </form>
 
 {% endblock %}
