--- a/imagersite/imagersite/templates/create_or_edit.html
+++ b/imagersite/imagersite/templates/create_or_edit.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Create or Edit
+  {{use_case}} {{model_name}}
 {% endblock %}
 
 {% block content %}
+
+<h3>{{use_case}} {{model_name}}</h3>
 
 <form method="post" action="." enctype="multipart/form-data">
   {% csrf_token %}
