--- a/imagersite/imagersite/templates/photo.html
+++ b/imagersite/imagersite/templates/photo.html
@@ -10,10 +10,12 @@
 <section class="single-photo">
   <article class="single-photo-info">
     <h3>{{object.title}}</h3>
-    <p>Sharing level: {{object.published}} | Date made public: {{object.date_published}}</p>
-    <p>Uploaded: {{object.date_uploaded}} | Edited: {{object.date_modified}}</p>
+    <p><strong>Sharing level:</strong> {{object.published}} | <strong>Date made public:</strong> {{object.date_published}}</p>
+    <p><strong>Uploaded:</strong> {{object.date_uploaded}} | <strong>Edited:</strong> {{object.date_modified}}</p>
+     <p><strong>Description:</strong> {{object.description}}</p>
     {% if object.albums.count %}
-      <p>Albums this photo is in:</p>
+    <div>
+      <p><strong>Albums this photo is in:</strong></p>
       {% for album in object.albums.all %}
         <a href="{% url 'album_detail' pk=photo.pk %}">
           <p>{{album.title}}</p>
@@ -22,13 +24,15 @@
     {% else %}
       <p>This photo is not in any albums.</p>
     {% endif %}
-    <img src="{{object.img_file.url}}">
-    <h5>Description: {{object.description}}</h5>
-    {% if photo.owner == user %}
+    </div>
+        {% if photo.owner == user %}
       <p>
         <a href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
       </p>
     {% endif %}
+    <div class="photo-containerh photo-containerw">
+    <img src="{{object.img_file.url}}">
+    </div>
   </article>
 </section>
 
