--- a/imagersite/imagersite/templates/library.html
+++ b/imagersite/imagersite/templates/library.html
@@ -25,9 +25,13 @@
             {% endthumbnail %}
             </a>
             {% if album.owner == user %}
-              <p>
-                <span><a href="{% url 'edit_album' pk=album.pk %}">Edit</a></span>
-                <span><a href="{% url 'delete_album' pk=album.pk %}">Delete</a></span>
+              <p class='edit-delete-album'>
+                <span class='edit-photo'>
+                  <a href="{% url 'edit_album' pk=album.pk %}">Edit</a>
+                </span>
+                <span class='delete-photo'>
+                  <a href="{% url 'delete_album' pk=album.pk %}">Delete</a>
+                </span>
               </p>
             {% endif %}
           </div>
@@ -48,9 +52,13 @@
                   <p>No Photo Found</p>
               {% endthumbnail %}
             {% if photo.owner == user %}
-              <p>
-                <span><a href="{% url 'edit_photo' pk=photo.pk %}">Edit</a></span>
-                <span><a href="{% url 'delete_photo' pk=photo.pk %}">Delete</a></span>
+              <p class='edit-delete-photo'>
+                <span class='edit-photo'>
+                  <a href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
+                </span>
+                <span class='delete-photo'>
+                  <a href="{% url 'delete_photo' pk=photo.pk %}">Delete</a>
+                </span>
               </p>
             {% endif %}
             </div>
