--- a/imagersite/imagersite/templates/album.html
+++ b/imagersite/imagersite/templates/album.html
@@ -10,7 +10,7 @@
 <div class="lib_block">
   <h4>Photos</h4>
   <section class="photos">
-        {% for photo in user.photos.all %}
+        {% for photo in object.photos.all %}
           <div class="thumbnail">
               <p class="photo-title">{{photo.title}}</p>
               {% thumbnail photo.img_file "200" as file %}
