SO close to thumbnails being uniform.

--- a/imagersite/static/base.css
+++ b/imagersite/static/base.css
@@ -8,7 +8,7 @@ section {
     align-content: center;
     margin-left: 2%;
     width:200px;
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 .thumbnail a {
