--- a/imagersite/static/base.css
+++ b/imagersite/static/base.css
@@ -8,7 +8,8 @@ section {
     align-content: center;
     margin-left: 2%;
     width:200px;
-    /*margin-bottom: 15px;*/
+    vertical-align: top;
+    overflow: hidden;
 }
 
 .thumbnail a {
