--- a/imagersite/imager_images/templates/imager_images/photo.html
+++ b/imagersite/imager_images/templates/imager_images/photo.html
@@ -25,16 +25,12 @@
       <p>This photo is not in any albums.</p>
     {% endif %}
     </div>
-    {% if photo.owner == user %}
-      <p class='edit-delete-photo'>
-        <span class='edit-photo'>
-          <a href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
-        </span>
-        <span class='delete-photo'>
-          <a href="{% url 'delete_photo' pk=photo.pk %}">Delete</a>
-        </span>
-      </p>
-    {% endif %}
+      {% if photo.owner == user %}
+        <p class='edit-delete edit-delete-photo'>
+          <a class='edit-photo' href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
+          <a class='delete-photo' href="{% url 'delete_photo' pk=photo.pk %}">Delete</a>
+        </p>
+      {% endif %}
     <div class="photo-containerh photo-containerw">
     <img src="{{object.img_file.url}}">
     </div>
