consolated css class to single edit-delete

--- a/imagersite/static/base.css
+++ b/imagersite/static/base.css
@@ -48,10 +48,6 @@ div h4{
     width: auto;
 }
 
-.edit-delete-photo a {
-    display: inline-block;
-}
-
-.edit-delete-album a {
+.edit-delete a {
     display: inline-block;
 }
