Updated album to show album details on album detail page. Also notated cover photo.

--- a/imagersite/imager_images/templates/imager_images/library.html
+++ b/imagersite/imager_images/templates/imager_images/library.html
@@ -37,7 +37,7 @@
     </section>
   </div>
 
-  <div class="lib_block">
+  <div class="lib-block">
     <h4>Photos</h4>
     <section class="photos">
       {% for photo in user.photos.all %}
