--- a/imagersite/imager_images/templates/imager_images/album.html
+++ b/imagersite/imager_images/templates/imager_images/album.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load thumbnail %}
+{% load staticfiles %}
 
 {% block title %}
   {{object.title}}
@@ -7,30 +8,48 @@
 
 {% block content %}
 
-<div class="lib_block">
-  <h4>Photos</h4>
-  <section class="photos">
-    {% for photo in object.photos.all %}
-      <div class="thumbnail">
-        <p class="photo-title">{{photo.title}}</p>
-        {% thumbnail photo.img_file "200" as file %}
-          <a href="{% url 'photo_detail' pk=photo.pk %}">
-            <img src="{{file.url}}">
-          </a>
-          {% empty %}
-            <p>No Photo Found</p>
-        {% endthumbnail %}
-
-        {% if photo.owner == user %}
-          <p class='edit-delete edit-delete-photo'>
-            <a class='edit-photo' href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
-            <a class='delete-photo' href="{% url 'delete_photo' pk=photo.pk %}">Delete</a>
+<section class="single-album">
+  <article class="single-album-info">
+    <h3>{{object.title}}</h3>
+    {% if object.owner == user %}
+      <p class='edit-delete edit-delete-album'>
+        <a class='edit-album' href="{% url 'edit_album' pk=album.pk %}">Edit</a>
+        <a class='delete-album' href="{% url 'delete_album' pk=album.pk %}">Delete</a>
+      </p>
+    {% endif %}
+    <p><strong>Sharing level:</strong> {{object.published}} | <strong>Date made public:</strong> {{object.date_published}}</p>
+    <p><strong>Description:</strong> {{object.description}}</p>
+  </article>
+  <div class="lib-block">
+    <h4>Photos</h4>
+    <section class="photos">
+      {% for photo in object.photos.all %}
+        <div class="thumbnail">
+          <p class="photo-title">{{photo.title}}
+            {% if photo == object.cover %}
+              <span>(Cover Photo)</span>
+            {% endif %}
           </p>
-        {% endif %}
+          {% thumbnail photo.img_file "200" as file %}
+            <a href="{% url 'photo_detail' pk=photo.pk %}">
+              <img src="{{file.url}}">
+            </a>
+            {% empty %}
+              <p>No Photo Found</p>
+          {% endthumbnail %}
 
-      </div>
-    {% endfor %}
-  </section>
-</div>
+          {% if photo.owner == user %}
+            <p class='edit-delete edit-delete-photo'>
+              <a class='edit-photo' href="{% url 'edit_photo' pk=photo.pk %}">Edit</a>
+              <a class='delete-photo' href="{% url 'delete_photo' pk=photo.pk %}">Delete</a>
+            </p>
+          {% endif %}
+
+        </div>
+      {% endfor %}
+    </section>
+  </div>
+</section>
+
 
 {% endblock %}
